--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ input,textarea,select{
   font-family: 'Montserrat', sans-serif;
 }
 .section{
-  background-color: #f2f2fc;
+  background-color: #3333FF;
   min-height: 100vh;
   display: block;
   padding: 0 30px;
