--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ input,textarea,select{
   font-family: 'Montserrat', sans-serif;
 }
 .section{
-  background-color: #f2f2fc;
+  background-color: #B0E0E6;
   min-height: 100vh;
   display: block;
   padding: 0 30px;
