--- a/style.css
+++ b/style.css
@@ -27,7 +27,8 @@ input,textarea,select{
   font-family: 'Montserrat', sans-serif;
 }
 .section{
-  background-color: #B0E0E6;
+
+   background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
   min-height: 100vh;
   display: block;
   padding: 0 30px;
