--- a/style.css
+++ b/style.css
@@ -28,7 +28,9 @@ input,textarea,select{
 }
 .section{
 
-   background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+  background-color: #8EC5FC;
+background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
+
   min-height: 100vh;
   display: block;
   padding: 0 30px;
