--- a/style.css
+++ b/style.css
@@ -28,9 +28,9 @@ input,textarea,select{
 }
 .section{
   
-  
-  background-color: #74EBD5;
-background-image: linear-gradient(90deg, #74EBD5 0%, #9FACE6 100%);
+background-color: #0093E9;
+background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+
 
   min-height: 100vh;
   display: block;
