--- a/style.css
+++ b/style.css
@@ -27,10 +27,10 @@ input,textarea,select{
   font-family: 'Montserrat', sans-serif;
 }
 .section{
+ 
   
-background-color: #0093E9;
-background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
-
+  background-color: #A9C9FF;
+background-image: linear-gradient(180deg, #A9C9FF 0%, #FFBBEC 100%);
 
   min-height: 100vh;
   display: block;
